--- a/index.html
+++ b/index.html
@@ -2,16 +2,31 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="author" content="">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <title>Calculator</title>
   <link href="style.css" rel="stylesheet">
 </head>
-
 <body>
+    <h1 id="display"></h1>
+    <div id="operatorsDiv">
+        <button class="operator">+</button>
+        <button class="operator">-</button>
+        <button class="operator">/</button>
+        <button class="operator">x</button>
+        <button id="equals">=</button>
+        <button id="clear">CLR</button>
+    </div>
+    <div id="operandsDiv">
+        <button class="operand">0</button>
+        <button class="operand">1</button>
+        <button class="operand">2</button>
+        <button class="operand">3</button>
+        <button class="operand">4</button>
+        <button class="operand">5</button>
+        <button class="operand">6</button>
+        <button class="operand">7</button>
+        <button class="operand">8</button>
+        <button class="operand">9</button>
+    </div>
   <script src="script.js"></script>
 </body>
 
