--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 <body>
     <h1 id="display"></h1>
     <div id="operatorsDiv">
-        <button class="operator">+</button>
-        <button class="operator">-</button>
-        <button class="operator">/</button>
-        <button class="operator">x</button>
-        <button id="equals">=</button>
-        <button id="clear">CLR</button>
+        <button id="+" class="operator">+</button>
+        <button id="-" class="operator">-</button>
+        <button id="/" class="operator">/</button>
+        <button id="*" class="operator">x</button>
+        <button id="=">=</button>
+        <button id="CLR">CLR</button>
     </div>
     <div id="operandsDiv">
-        <button class="operand">0</button>
-        <button class="operand">1</button>
-        <button class="operand">2</button>
-        <button class="operand">3</button>
-        <button class="operand">4</button>
-        <button class="operand">5</button>
-        <button class="operand">6</button>
-        <button class="operand">7</button>
-        <button class="operand">8</button>
-        <button class="operand">9</button>
+        <button id="0" class="operand">0</button>
+        <button id="1" class="operand">1</button>
+        <button id="2" class="operand">2</button>
+        <button id="3" class="operand">3</button>
+        <button id="4" class="operand">4</button>
+        <button id="5" class="operand">5</button>
+        <button id="6" class="operand">6</button>
+        <button id="7" class="operand">7</button>
+        <button id="8" class="operand">8</button>
+        <button id="9" class="operand">9</button>
     </div>
   <script src="script.js"></script>
 </body>
