--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="*" class="operator">x</button>
         <button id="=">=</button>
         <button id="CLR">CLR</button>
+        <button id="Backspace">Backspace</button>
     </div>
     <div id="operandsDiv">
         <button id="0" class="operand">0</button>
