Added decimal input functionality

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button id="7" class="operand">7</button>
         <button id="8" class="operand">8</button>
         <button id="9" class="operand">9</button>
+        <button id="." class="operand">.</button>
     </div>
   <script src="script.js"></script>
 </body>
