--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <button id="+" class="operator">+</button>
                 </div>
             <div id="column5" class="column">
-                <button id="Backspace">Back</button>
-                <button id="CLR">Clear<R/button>
-                <button id="equals">=</button>
+                <button id="Backspace" class="operator">Back</button>
+                <button id="CLR" class="operator">Clear<R/button>
+                <button id="equals" class="operator">=</button>
             </div>
         </div>
     </div>
