Fixed additional bugs,added comments

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </div>
             <div id="column5" class="column">
                 <button id="Backspace" class="relation">Back</button>
-                <button id="CLR" class="relation">Clear<R/button>
-                <button id="equals" class="relation">=</button>
+                <button id="Delete" class="relation">Clear<R/button>
+                <button id="Enter" class="relation">=</button>
             </div>
         </div>
     </div>
